<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bdbcbc"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:paddingBottom="@dimen/viewPaddingVertical"
        android:paddingTop="@dimen/viewPaddingVertical"
        android:scaleType="centerInside"
        android:src="@drawable/socologo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/viewPaddingHorizontal">

        <TextView
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/viewPaddingVertical"
            android:text="@string/app_name" />

        <TextView
            style="@style/regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingTop="@dimen/viewPaddingVertical"
            android:text="@string/phone" />

        <TextView
            style="@style/regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="map"
            android:paddingTop="@dimen/viewPaddingVertical"
            android:text="@string/address" />

        <TextView
            style="@style/regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="@dimen/viewPaddingVertical"
            android:paddingTop="@dimen/viewPaddingVertical"
            android:text="@string/URL" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/viewPaddingVertical"
            android:text="@string/description" />

        <TextView
            style="@style/descItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/viewPaddingVertical"
            android:paddingTop="@dimen/viewPaddingVertical"
            android:text="@string/easy"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>